Complete minimalistic header implemented

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,6 @@
-<nav class="top-header navbar navbar-default navbar-fixed-top" role="navigation">
-    <a class="navbar-brand" href="#page-top">ELEXES</a>
-    <div class="dropdown profile-dropdown">
-        <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <img src="img/profile.jpg" alt="User Profile" class="img-circle">
-            <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-right">
-            <li><a href="/logout">Logout</a></li>
-        </ul>
-    </div>
-</nav>
+<header class="top-header">
+    <a href="/" class="logo-header navbar-brand">ELEXES</a>
+    <a class="right-nav-button" href="/auth/">
+        <button class="btn btn-primary">Sign in using Google Account</button>
+    </a>
+</header>
