--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="top-header">
     <a href="/" class="logo-header navbar-brand">ELEXES</a>
-    <a class="right-nav-button" href="/auth/">
+    <a class="right-nav-button" href="/authorize/">
         <button class="btn btn-primary">Sign in using Google Account</button>
     </a>
 </header>
