First attempt at full login

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
 <body>
     <% include partials/header %>
     <section id="hero" class="container-fluid">
+    Welcome <%= user %>
         <div class="col-lg-10 col-lg-offset-1">
             One place to discover and improve all your documents!
         </div>
