Make title generic

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,11 @@
 <header class="top-header">
     <a href="/" class="logo-header navbar-brand">ELEXES</a>
+    <% if(currentUser) { %>
+
+    <% } %>
+    <% else { %>
     <a class="right-nav-button" href="/authorize/">
         <button class="btn btn-primary">Sign in using Google Account</button>
     </a>
+    <% } %>
 </header>
