--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Document Control Admin Page</title>
+<title><%= title %></title>
 <link href="css/main.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
