--- a/public/scss/partials/_navigation.scss
+++ b/public/scss/partials/_navigation.scss
@@ -23,4 +23,8 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
     opacity: 1;
     display: block;
     font-size: $base-font-size;
+    .img {
+        width: 10px;
+        height: 10px;
+    }
 }
