--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,11 @@
     <a href="/" class="logo-header navbar-brand">ELEXES</a>
     <% if(user) { %>
         <div class="dropdown right-nav-button">
-             <button class="dropdown-toggle" type="button" id="profileDropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+             <a class="dropdown-toggle" type="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 <img src="<%= photo %>" alt="User Profile" class="img-circle">
                 <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown1">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-right">
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
