--- a/public/scss/partials/_base.scss
+++ b/public/scss/partials/_base.scss
@@ -17,15 +17,15 @@ $fixed-line-height: $base-line-height;
 
 // Headings
 $header-font-weight: $light;
-$h1-font-size: 6.125 * $base-font-size;
-$h2-font-size: 5.875 * $base-font-size;
-$h3-font-size: 5 * $base-font-size;
-$h4-font-size: 3.125 * $base-font-size;
-$h5-font-size: 2.3 * $base-font-size;
-$h6-font-size: 1.875 * $base-font-size;
+$h1-font-size: 3.125 * $base-font-size;
+$h2-font-size: 2.5 * $base-font-size;
+$h3-font-size: 1.5 * $base-font-size;
+$h4-font-size: 1 * $base-font-size;
+$h5-font-size: 0.75 * $base-font-size;
+$h6-font-size: 0.5 * $base-font-size;
 
 // Colors
-$main-color: #03a9f4;
+$main-color: #5e5e5e;
 $link-color: $main-color;
 $link-lighten-amount: 20%;
 $base-background-color: #F5F0EA;
@@ -36,10 +36,10 @@ $icon-fill-color: #8b8b8b;
 
 // Sizes
 $min-section-height: 350px;
-$section-padding-top: 50px;
+$section-padding-top: 75px;
 $section-padding-bottom: 60px;
-$small-section-padding-top: 20px;
-$small-section-padding-bottom: 40px;
+$small-section-padding-top: 50px;
+$small-section-padding-bottom: 50px;
 
 // Global variables
 $base-transition: all .3s;
