--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,13 +10,13 @@
     <div class="container-fluid">
     <section>
         <div class="col-lg-10 col-lg-offset-1">
-            <h1>One place to discover and improve all your documents!</h1>
+            <h1>Document Control Admin Page</h1>
         </div>
         <div class="btn-toolbar">
+             <button type="button" class="btn btn-default">Manage Org</button>
             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#initiate">Initiate a change</button>
             <button type="button" class="btn btn-default">Your pending actions <span class="badge bg-danger">5</span></button>
             <button type="button" class="btn btn-default">All published documents</button>
-            <button type="button" class="btn btn-default">Your saved data</button>
         </div>
         <h2>Your Pending Actions</h2>
         <div class="action-bar">
@@ -26,9 +26,8 @@
                     <div class="row">
                         <p class="col-md-6">DC wants you to review changes done by Michael.</p>
                         <div class="col-md-6 btn-toolbar">
-                            <button type="button" class="btn btn-danger">Review</button>
-                            <button type="button" class="btn btn-warning">Mark Commented</button>
-                            <button type="button" class="btn btn-success">Approve</button>
+                            <button type="button" class="btn btn-danger">View Details</button>
+                            <button type="button" class="btn btn-warning">Assign Reviewers</button>
                         </div>
                     </div>
                 </div>
