--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,10 @@
         </div>
     <% } else { %>
     <a class="right-nav-button" href="/authorize/">
-        <button class="btn btn-primary">Sign in using Google Account</button>
+        <button class="btn btn-primary">
+        <i class="fa fa-google-plus fa-lg visible-xs"></i>
+        <div class="hidden-xs">Sign in using Google Account</div>
+        </button>
     </a>
     <% } %>
 </header>
