--- a/public/scss/partials/_global.scss
+++ b/public/scss/partials/_global.scss
@@ -22,6 +22,7 @@ body, html {
     font-weight: $regular;
     width: 100%;
     height: 100%;
+    color: $main-color;
     background: $base-background-color;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .004);
     text-rendering: optimizeLegibility !important;
@@ -39,10 +40,11 @@ section {
         padding-top: $small-section-padding-top;
         padding-bottom: $small-section-padding-bottom;
     }
-    h3 {
-        margin-top: 50px;
+    h1 {
+        margin-top: 60px;
+        margin-bottom: 60px;
         @media (max-width: 767px) {
-            padding-bottom: 30px;
+            margin-bottom: 30px;
         }
     }
 }
@@ -134,86 +136,5 @@ time {
         height: 100%;
         transition: opacity .5s;
         opacity: 1;
-    }
-}
-@keyframes base {
-    0% {
-        transform: rotate(0deg);
-        background-color: #21aa29;
-    }
-    25% {
-        transform: rotate(90deg);
-        background-color: #2159d6;
-    }
-    50% {
-        transform: rotate(180deg);
-        background-color: #d62408;
-    }
-    75% {
-        transform: rotate(270deg);
-        background-color: #ffcf00;
-    }
-    100% {
-        transform: rotate(360deg);
-        background-color: #21aa29;
-    }
-}
-@keyframes reveal {
-    0% {
-        background-color: #2159d6;
-        transform: rotate(0deg);
-    }
-    25% {
-        background-color: #d62408;
-        transform: rotate(180deg);
-    }
-    50% {
-        background-color: #ffcf00;
-        transform: rotate(0deg);
-    }
-    75% {
-        background-color: #21aa29;
-        transform: rotate(180deg);
-    }
-    100% {
-        background-color: #2159d6;
-        transform: rotate(0deg);
-    }
-}
-@keyframes flip {
-    0% {
-        background-color: #21aa29;
-        transform: rotateY(0deg);
-    }
-    12.5%, 87.56% {
-        background-color: #105514;
-    }
-    12.51%, 37.5% {
-        background-color: #102c6b;
-    }
-    25% {
-        background-color: #2159d6;
-    }
-    37.51%, 62.5% {
-        background-color: #6b1204;
-    }
-    50% {
-        background-color: #d62408;
-    }
-    62.51%, 87.5% {
-        background-color: #7f6700;
-    }
-    75%, 78% {
-        background-color: #ffcf00;
-    }
-    100% {
-        background-color: #21aa29;
-        transform: rotateY(-720deg);
-    }
-}
-.social-links {
-    li {
-        margin-right: 4px;
-        display: inline-block;
     }
 }
