--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
 <meta name="author" content="">
 
 <title><%= title %></title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet">
 
 <!--[if lt IE 9]>
