--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,20 +19,23 @@
             <button type="button" class="btn btn-default">All published documents</button>
         </div>
         <h2>Your Pending Actions</h2>
+        <% var initiationList = JSON.parse(initiations); %>
+        <% for(var i=0; i<initiationList.length; i++) { %>
         <div class="action-bar">
             <div class="row">
                 <div class="col-xs-1"><i class="fa fa-file-text fa-3x hidden-xs"></i></div>
                 <div class="col-xs-11">
                     <div class="row">
-                        <p class="col-md-6">DC wants you to review changes done by Michael.</p>
+                        <p class="col-md-6"><%= initiationList[i]['initiator']['firstName'] %> initiated a change in the document:<%= initiationList[i]['dco']['title'] %></p>
                         <div class="col-md-6 btn-toolbar">
-                            <button type="button" class="btn btn-danger">View Details</button>
-                            <button type="button" class="btn btn-warning">Assign Reviewers</button>
+                            <a role="button" class="btn btn-default" href="<%= initiationList[i]['dco']['link'] %>" target="_blank">View Details <%= initiationList[i]['dco']['title'] %></a>
+                            <a role="button" class="btn btn-warning">Assign Reviewers</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <% } %>
     </section>
     </div>
     <% include partials/footer %>
