--- a/public/scss/partials/_dashboard.scss
+++ b/public/scss/partials/_dashboard.scss
@@ -12,7 +12,7 @@ $action-colour: #ffffff;
     margin: 10px;
     padding: 10px;
     p {
-        text-align: center;
+        text-align: left;
         padding: 5px;
         vertical-align: middle;
     }
