--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -6,6 +6,7 @@
         top: -10px;
         right: -10px;
         position: absolute;
+        background-color: #F07730;
     }
 }
 .btn-primary {
